ENH: Add slides for DDAS Jupyter notebook.

--- a/python/ddas-2.ipynb
+++ b/python/ddas-2.ipynb
@@ -10,7 +10,11 @@
    "source": [
     "# Example-2: MCP Detector Data from DDAS\n",
     "\n",
-    "Very similar to PPAC"
+    "This is a complete notebook to show how to analysis the MCP detector data from DDAS (which is very similar to PPAC), with pure Python script, the required knowledge about the data is also explained.\n",
+    "\n",
+    "Tong Zhang <zhangt@frib.msu.edu>\n",
+    "\n",
+    "2021-06-21"
    ]
   },
   {
@@ -76,7 +80,9 @@
    "outputs": [],
    "source": [
     "# HDF5 data file\n",
-    "filepath = \"../../../nscl_data/DDAS/run-0227-00.evt.h5\""
+    "filepath = \"../../../nscl_data/DDAS/run-0227-00.evt.h5\"\n",
+    "# data could be downloaded from:\n",
+    "# https://gitlab.msu.edu/zhangto71/ddas-data-example/-/raw/master/run-0227-00.evt.h5"
    ]
   },
   {
@@ -905,7 +911,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f9aeea35a00>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f959a0a7d90>"
       ]
      },
      "execution_count": 14,
