REF: Update notebook example and slides.

--- a/python/ddas-mcp.ipynb
+++ b/python/ddas-mcp.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "This is a complete notebook to show how to analysis the MCP detector data from DDAS (which is very similar to PPAC), with pure Python script, the required knowledge about the data is also explained.\n",
     "\n",
-    "Tong Zhang <zhangt@frib.msu.edu>\n",
+    "The raw event data was generated from DDAS on 2020-12-15, provided by Scott Cogan (BIM), and processed with [h5readout](https://github.com/archman/h5readout) to convert and compress to HDF5 format. \n",
+    "\n",
+    "Tong Zhang (<zhangt@frib.msu.edu>)\n",
     "\n",
     "2021-06-21"
    ]
@@ -950,7 +952,7 @@
    "source": [
     "The energy signal is correlated with the peak height rising from the lethargy area, the 'Energy' column of FragmentData is processed by the DDAS firmware with the builtin algorithm.\n",
     "\n",
-    "Here, an approximated approach is applied to generate the pseduo energy column, by measuring the peak height from the max and min of the trace data, which is rough by fast."
+    "Here, an approximate approach is applied to generate the pseduo energy column, by measuring the peak height from the max and min of the trace data, which is rough by fast."
    ]
   },
   {
