--- a/python/ddas-mcp.ipynb
+++ b/python/ddas-mcp.ipynb
@@ -883,7 +883,7 @@
    "source": [
     "## Background noise\n",
     "\n",
-    "Now you may have the needs to suppress the background noise signals, the way to estimate the noise and valid signal is to find out the siangl threshold, which is indicated by Energy column in the FragmentData.\n",
+    "Now you may have the needs to suppress the background noise signals, the way to estimate the noise and valid signal is to find out the signal threshold, which is indicated by Energy column in the FragmentData.\n",
     "\n",
     "But the Energy value read from FragmentData for this run could not be used (you can see there's lots of saturated readings), the approach below shows how to get 'Energy' info from the orignal TraceData (remember we have another super large table for TraceData under '/Events' group)"
    ]
@@ -952,7 +952,7 @@
    "source": [
     "The energy signal is correlated with the peak height rising from the lethargy area, the 'Energy' column of FragmentData is processed by the DDAS firmware with the builtin algorithm.\n",
     "\n",
-    "Here, an approximate approach is applied to generate the pseduo energy column, by measuring the peak height from the max and min of the trace data, which is rough by fast."
+    "Here, an approximate approach is applied to generate the pseduo energy column, by measuring the peak height from the max and min of the trace, which is rough but fast."
    ]
   },
   {
@@ -995,8 +995,8 @@
    },
    "outputs": [],
    "source": [
-    "# Keep in mind the valid events should have 4 fragments, the two lines below calculate the pseduo energy\n",
-    "# by averaging the 4 height values to be the final Energy info\n",
+    "# Keep in mind the valid events should have 4 fragments, the two lines below calculate\n",
+    "# the pseduo energy by averaging the 4 height values to be the final Energy info\n",
     "_ind = [list(i) for i in df_multi.index.to_list()]\n",
     "df_multi['avg_height'] = [float(df2[_ind[i]].mean(axis=1)) for i in range(len(_ind))]"
    ]
